--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Weapon-From-Eternity_66042
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 66042-h/images/cover.jpg
 creator:
   author:
     agent_name: Swain, Dwight V.
@@ -11,6 +14,8 @@ creator:
     - https://en.wikipedia.org/wiki/Dwight_V._Swain
     - http://www.gutenberg.org/ebooks/author/35980
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66042#The-Weapon-From-Eternity
 gutenberg_issued: '2021-08-11'
 gutenberg_type: Text
 identifiers:
